--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>I Love Kanchan.</h1>
+    <h1>Hi guys i am Pushkar</h1>
+    <h2>hi</h2>
+
 </body>
 </html>
