--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <h5>hhihihiihi</h5>     
     <h6>uheuheuheue</h6>
     <h2>lonavala</h2>
-    <h3> had fun 13 feb</h3>
+    <h3> had b</h3>
 </body>
 </html>
