--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <h4>i am h4</h4>
     <h5>hhihihiihi</h5>     
     <h6>uheuheuheue</h6>
-    <h2>lonavala</h2>
-    <h3> had b</h3>
+    <h2>lonaval
 </body>
 </html>
