--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-jkbedbjd<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,16 +7,12 @@ jkbedbjd<!DOCTYPE html>
 </head>
 <body>
     <h1>Hi guys i am Pushkar</h1>     
-    <h2>hi</h2>33r3rrewwffwewe
-    <h3>i am h3</h3>defeefw
-    <h4>i am h4</h4>dwuewiugiodu32
-    <h5>hhihihiihi</h5>             ihdewiohdiwe
+    <h2>hi</h2>
+    <h3>i am h3</h3>
+    <h4>i am h4</h4>
+    <h5>hhihihiihi</h5>         
     <h6>uheuheuheue</h6>    
-    <h2>lonaval
+    <h2>
 </body>
-
-
-
-    heloo woerld
     
 </html>
