--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h4>i am h4</h4>
     <h5>hi</h5>         
     <h6>ujnfwernfewe</h6>    
-    <h1>hello hi hey i am pushkar </h1>
+    <h1>hello hi sjedehey i am pushkar </h1>
     <h2>
 </body>
     
