--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <h4>i am h4</h4>
     <h5>hi</h5>         
     <h6>ujnfwernfewe</h6>    
-    <h1>hello hi sjedehey i am pushkar </h1>
-    <h2>
+    <h1>hello hi s <h1></h1>
 </body>
     
 </html>
