--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h4>i am h4</h4>
     <h5>hi</h5>         
     <h6></h6>    
-    <h1>hello hi s <h1></h1>
+    <h1>hello hi <h1></h1>
 </body>
     
 </html>
