--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <h1>Hi guys i am Pushkar</h1>     
-    <h2>h i</h2>
+    <h2>h ]i</h2>
     <h3>i am h3</h3>
     <h4>i am h4</h4>
     <h5>h  </h5>         
     <h6></h6>    
-    <h1>hello hi <h1></h1>
+    <h1>hello<h1></h1>
 </body>
     
 </html>
