--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>  
-<body>edhb dchewdc
+<body>
     <h1>Hi guys i am Pushkar</h1>    
     <h3>i am h3</h3>
     <h4>  h4</h4>
