--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>  
-<body>
-    <h1>Hi guys i am Pushkar</h1>    
+<bod  
     <h3>i am 
     <h4>  h4</h4>
          
